# election

./: .gitignore  politics_recognition.py  pyproject.toml
src/: dataset.py  db.py  face_recognition.py  scraper.py  utils.py  yunet_detection.py
src/video/: video_recorder.py
